partial commit of template tags work

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/datepicker/css/bootstrap-datepicker3.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/mailtrain.css">
+    <link rel="stylesheet" href="/css/jquery.tagsinput.min.css">
 
     {{#if useEditor}}
         <link rel="stylesheet" href="/summernote/summernote.css">
@@ -159,6 +160,7 @@
     <script src="/moment/moment.min.js"></script>
     <script src="/javascript/tables.js"></script>
     <script src="/javascript/fetch.js"></script>
+    <script src="/javascript/jquery.tagsinput.min.js"></script>
 
     {{#if useEditor}}
         <script src="/ace/ace.js" type="text/javascript" charset="utf-8"></script>
