--- a/views/templates/create.hbs
+++ b/views/templates/create.hbs
@@ -46,6 +46,13 @@
     </div>
 
     <div class="form-group">
+        <label for="template-tags" class="col-sm-2 control-label">{{#translate}}Tags{{/translate}}</label>
+        <div class="col-sm-10">
+            <textarea class="form-control" id="template-tags" name="tags" rows="3" placeholder="{{#translate}}Optional tags for this template (can be useful when programatically accessing templates via the API){{/translate}}">{{tags}}</textarea>
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> {{#translate}}Create Template{{/translate}}</button>
         </div>
@@ -88,5 +95,8 @@
                 $('#' + editor + '-template').clone()
             );
         });
+
+        $('#template-tags').tagsInput();
+
     });
 </script>
